[구조] 스타일시트 링크 추가

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <meta property="og:description" content="숲 놀이, 숲놀이, 숲체험, 숲 체험, 행복한 아이, 미래를 꿈꾸는 아이">
   <meta property="og:url" content="https://happy-play.github.io/">
   <!---meta name="naver-site-verification" content=""/--->
+  <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
   <title>행복이 자라는 놀이터</title>
 </head>
