[구조] happy & play 추가

--- a/index.html
+++ b/index.html
@@ -22,75 +22,213 @@
     <p class="skip_content"><a href="#footer">하단 바로가기</a></p>
   </div>
   <div class="container">
-    <header class="header">
-      <h1 class="header__logo">
-        <a href="./" target="_blank" rel="noopener noreferrer">
-          <img srcset="./images/logo_color.svg" src="./images/logo_color.png" alt="행복이 자라는 놀이터">
-        </a>
-      </h1>
-      <div class="header__menu">
-        <div class="header__menu__desktopView">
-          <div class="header__menu__desktopView__item"><a href="#">놀이란?</a></div>
-          <div class="header__menu__desktopView__item"><a href="#">놀 권리</a></div>
+    <div class="header__wrap">
+      <header class="header">
+        <h1 class="header__logo">
+          <a href="./" target="_self" rel="noopener noreferrer">
+            <img srcset="./images/logo_color.svg" src="./images/logo_color.png" alt="행복이 자라는 놀이터">
+          </a>
+        </h1>
+        <div class="header__menu">
+          <h2 class="a11yHidden">메뉴</h2>
+          <div class="header__menu__desktopView">
+            <div class="header__menu__desktopView__item"><a href="#">놀이란?</a></div>
+            <div class="header__menu__desktopView__item"><a href="#">놀 권리</a></div>
+          </div>
+          <a class="header__menu__open">
+            <span class="a11yHidden">전체메뉴 열기</span>
+            <span class="header__menu__open__line"></span>
+            <span class="header__menu__open__line"></span>
+            <span class="header__menu__open__line"></span>
+          </a>
+          <div class="header__menuAll">
+            <ul class="header__menuAll__step1">
+              <li><a href="#">행복이 자라는 놀이터</a></li>
+              <li><a href="#">놀이란?</a></li>
+              <li><a href="#">놀 권리</a></li>
+              <li><a href="#">행복한 놀이터란?</a></li>
+              <li><a href="#">전주시 숲 놀이터 / 체험원</a></li>
+            </ul>
+            <a class="menu__close"><span class="a11yHidden">메뉴 닫기</span>&#215;</a>
+          </div>
         </div>
-        <a class="header__menu__open">
-          <span class="header__menu__open__line"></span>
-          <span class="header__menu__open__line"></span>
-          <span class="header__menu__open__line"></span>
-        </a>
-        <div class="header__menuAll">
-          <ul class="header__menuAll__step1">
-            <li><a href="#">행복이 자라는 놀이터</a></li>
-            <li><a href="#">놀이란?</a></li>
-            <li><a href="#">놀 권리</a></li>
-            <li><a href="#">행복한 놀이터란?</a></li>
-            <li><a href="#">전주시 숲 놀이터 / 체험원</a></li>
-          </ul>
-          <a class="menu__close">&#9532;</a>
-        </div>
-      </div>
-      <div class="header__contactUs"></div>
-    </header>
+        <div hidden class="header__contactUs"></div>
+      </header>
+    </div>
     <main class="main">
       <div class="visual">
-        <div class="visual__container swiper-container">
+        <div class="visual__container swiper-container swiper-container-fade swiper-container-horigintal swiper-container-pointer-events">
           <div class="visual__wrap swiper-wrapper">
             <div class="visual__item swiper-slide">
-              <figure class="visual__item__image"></figure>
+              <figure class="visual__item__image">
+                <img src="/images/visual2107-22_01.png" alt="숲에서 나뭇가지를 발견한 아이">
+              </figure>
               <div class="visual__item__content">
                 <div class="visual__item__content is-wrap">
-                  <p class="visual__item__content__title"></p>
-                  <p class="visual__item__content__Text"></p>
-                  <div href="" class="visual__item__content__btnBox">
-                    <a href="" class="visual__item__content__linkBtn"></a>
+                  <p class="visual__item__content__title">
+                    <span>자연은 아이들에게</span>
+                    <span>최고의 놀이터</span>
+                  </p>
+                  <p class="visual__item__content__text">
+                    <span>자연에 한 발 한 발 내딛을 수록 아이들의 오감과</span>
+                    <span>호기심이 깨어납니다.</span>
+                  </p>
+                  <div href="" class="visual__item__content__btnBox is-btnBox">
+                    <a href="" class="visual__item__content__linkBtn is-btnBox__link">자세히보기 &#10230;</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="visual__item swiper-slide">
+              <figure class="visual__item__image">
+                <img src="/images/visual2107-22_02.png" alt="숲에서 나뭇가지를 발견한 아이">
+              </figure>
+              <div class="visual__item__content">
+                <div class="visual__item__content is-wrap">
+                  <p class="visual__item__content__title">
+                    <span>자연은 아이들에게</span>
+                    <span>최고의 놀이터</span>
+                  </p>
+                  <p class="visual__item__content__text">
+                    <span>자연에 한 발 한 발 내딛을 수록 아이들의 오감과</span>
+                    <span>호기심이 깨어납니다.</span>
+                  </p>
+                  <div href="" class="visual__item__content__btnBox is-btnBox">
+                    <a href="" class="visual__item__content__linkBtn is-btnBox__link">자세히보기 &#10230;</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="visual__item swiper-slide">
+              <figure class="visual__item__image">
+                <img src="/images/visual2107-22_03.png" alt="숲에서 나뭇가지를 발견한 아이">
+              </figure>
+              <div class="visual__item__content">
+                <div class="visual__item__content is-wrap">
+                  <p class="visual__item__content__title">
+                    <span>자연은 아이들에게</span>
+                    <span>최고의 놀이터</span>
+                  </p>
+                  <p class="visual__item__content__text">
+                    <span>자연에 한 발 한 발 내딛을 수록 아이들의 오감과</span>
+                    <span>호기심이 깨어납니다.</span>
+                  </p>
+                  <div href="" class="visual__item__content__btnBox is-btnBox">
+                    <a href="" class="visual__item__content__linkBtn is-btnBox__link">자세히보기 &#10230;</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="visual__item swiper-slide">
+              <figure class="visual__item__image">
+                <img src="/images/visual2107-22_04.png" alt="숲에서 나뭇가지를 발견한 아이">
+              </figure>
+              <div class="visual__item__content">
+                <div class="visual__item__content is-wrap">
+                  <p class="visual__item__content__title">
+                    <span>자연은 아이들에게</span>
+                    <span>최고의 놀이터</span>
+                  </p>
+                  <p class="visual__item__content__text">
+                    <span>자연에 한 발 한 발 내딛을 수록 아이들의 오감과</span>
+                    <span>호기심이 깨어납니다.</span>
+                  </p>
+                  <div href="" class="visual__item__content__btnBox is-btnBox">
+                    <a href="" class="visual__item__content__linkBtn is-btnBox__link">자세히보기 &#10230;</a>
                   </div>
                 </div>
               </div>
             </div>
           </div>
           <div class="visual__navigation swiper_navigation">
-            <div class="swiper-button-prev element_cursor"></div>
-            <div class="swiper-button-next element_cursor"></div>
+            <div class="swiper-button-prev is-prev element_cursor"></div>
+            <div class="swiper-button-next is-next element_cursor"></div>
           </div>
           <div class="visual__state">
             <div class="visual__stateBox swiper_control">
-              <div class="swiper-pagination swiper-pagination-fraction">
-                <span class="swiper-pagination-current">1</span>
-                <span class="swiper_progress_hidden_space"></span>
-                <span class="swiper-pagination-total">2</span>
+              <div class="swiper-pagination">
+                <span class="swiper-pagination-bullet"></span>
               </div>
-              <div class="swiper_progress_wrap">
-                <span class="swiper_progress"></span>
+              <!--div class="visual__state__progress">
+                <span class="visual__state__progressBar"></span>
+              </div-->
+              <div class="visual__state__totalPage">
+                <span class="swiper_totalPage__number">4</span>
               </div>
-              <div class="swiper_play_state play">
-                <button class="swiper_play_state_btn swiper_state_play"><span class="sr_only">재생</span></button>
-                <button class="swiper_play_state_btn swiper_state_pause"><span class="sr_only">일시정지</span></button>
+              <div class="stopPlay">
+                <button class="autoplayStop" title="일시정지">&#8741;</button>
+                <button style="display: none;" class="autoplayStart" title="재생">&#9656;</button>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div id="mainContent" class="main__content"></div>
+      <div id="mainContent" class="main__content">
+        <div class="happyPlay">
+          <h2 class="content_title">
+            <span class="smallTitle">Introduce</span>
+            <span class="bigTitle">happy &#38; play</span>
+          </h2>
+          <div class="happyPlay__slide">
+            <div class="happyPlay__slide__container swiper-container swiper-container-fade swiper-container-horigintal swiper-container-pointer-events">
+              <div class="happyPlaySlide swiper-wrapper">
+                <div class="happyPlaySlide__item swiper-slide">
+                  <figure class="happyPlaySlide__item__image">
+                    <img src="/images/happy_play__happy.png" alt="숲에서 나뭇가지를 발견한 아이">
+                  </figure>
+                  <div class="happyPlaySlide__item__content">
+                    <div class="happyPlaySlide__item__content is-wrap">
+                      <p class="happyPlaySlide__item__content__title">행복</p>
+                      <p class="happyPlaySlide__item__content__text">
+                        아이들이 바라는 행복은 어렵지않습니다. 주위를 둘러보고 옆에 있는 사람, 자연 등 환경을 있는 그대로 느낄 수 있도록 아이들에게 기회를 주세요.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="happyPlaySlide__item swiper-slide">
+                  <figure class="happyPlaySlide__item__image">
+                    <img src="/images/happy_play__free.png" alt="숲에서 나뭇가지를 발견한 아이">
+                  </figure>
+                  <div class="happyPlaySlide__item__content">
+                    <div class="happyPlaySlide__item__content is-wrap">
+                      <p class="happyPlaySlide__item__content__title">자유</p>
+                      <p class="happyPlaySlide__item__content__text">
+                        아이들이 바라는 행복은 어렵지않습니다. 주위를 둘러보고 옆에 있는 사람, 자연 등 환경을 있는 그대로 느낄 수 있도록 아이들에게 기회를 주세요.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="happyPlaySlide__item swiper-slide">
+                  <figure class="happyPlaySlide__item__image">
+                    <img src="/images/happy_play__curiosity.png" alt="숲에서 나뭇가지를 발견한 아이">
+                  </figure>
+                  <div class="happyPlaySlide__item__content">
+                    <div class="happyPlaySlide__item__content is-wrap">
+                      <p class="happyPlaySlide__item__content__title">자유</p>
+                      <p class="happyPlaySlide__item__content__text">
+                        아이들이 바라는 행복은 어렵지않습니다. 주위를 둘러보고 옆에 있는 사람, 자연 등 환경을 있는 그대로 느낄 수 있도록 아이들에게 기회를 주세요.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="happyPlaySlide__item swiper-slide">
+                  <figure class="happyPlaySlide__item__image">
+                    <img src="/images/happy_play__adventure.png" alt="숲에서 나뭇가지를 발견한 아이">
+                  </figure>
+                  <div class="happyPlaySlide__item__content">
+                    <div class="happyPlaySlide__item__content is-wrap">
+                      <p class="happyPlaySlide__item__content__title">자유</p>
+                      <p class="happyPlaySlide__item__content__text">
+                        아이들이 바라는 행복은 어렵지않습니다. 주위를 둘러보고 옆에 있는 사람, 자연 등 환경을 있는 그대로 느낄 수 있도록 아이들에게 기회를 주세요.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <footer id="footer" class="footer">
       © 2021 행복이 자라는 놀이터. <span lang="en">ALL RIGHTS RESERVED. Designed by Ssun.</span>
@@ -98,5 +236,8 @@
   </div>
 </body>
 <link rel="shortcut icon" href="favicon.ico">
-<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
+<script src="./js/main.js"></script>
+<script src="./js/global.js"></script>
 </html>
