[스타일]  happy & play 반응형

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:url" content="https://happy-play.github.io/">
   <!---meta name="naver-site-verification" content=""/--->
   <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css" />
   <title>행복이 자라는 놀이터</title>
 </head>
 <body>
@@ -170,7 +170,7 @@
             <span class="bigTitle">happy &#38; play</span>
           </h2>
           <div class="happyPlay__slide">
-            <div class="happyPlay__slide__container swiper-container swiper-container-fade swiper-container-horigintal swiper-container-pointer-events">
+            <div class="happyPlay__slide__container swiper-container">
               <div class="happyPlaySlide swiper-wrapper">
                 <div class="happyPlaySlide__item swiper-slide">
                   <figure class="happyPlaySlide__item__image">
@@ -224,6 +224,19 @@
                     </div>
                   </div>
                 </div>
+                <div class="happyPlaySlide__item swiper-slide">
+                  <figure class="happyPlaySlide__item__image">
+                    <img src="/images/happy_play__imagination.png" alt="숲에서 나뭇가지를 발견한 아이">
+                  </figure>
+                  <div class="happyPlaySlide__item__content">
+                    <div class="happyPlaySlide__item__content is-wrap">
+                      <p class="happyPlaySlide__item__content__title">자유</p>
+                      <p class="happyPlaySlide__item__content__text">
+                        아이들이 바라는 행복은 어렵지않습니다. 주위를 둘러보고 옆에 있는 사람, 자연 등 환경을 있는 그대로 느낄 수 있도록 아이들에게 기회를 주세요.
+                      </p>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -238,6 +251,7 @@
 <link rel="shortcut icon" href="favicon.ico">
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
-<script src="./js/main.js"></script>
+<script src="./js/imgSlider.js"></script>
+<script src="./js/visual.js"></script>
 <script src="./js/global.js"></script>
 </html>
