--- a/index.html
+++ b/index.html
@@ -241,6 +241,23 @@
             </div>
           </div>
         </div>
+        <div class="purpose">
+          <h2 class="purpose__title">
+            <span class="a11yhidden">행복이 자라는 놀이터의 목표</span>
+            <span>행복 가득한 놀이터를 꿈꿉니다.</span>
+          </h2>
+          <figure class="purpose__img">
+            <img src="./images/introRain_img.png" alt="">
+          </figure>
+          <div class="purpose__content">
+            <p>아이들의 호기심과</p>
+            <p>모험심이 라자는 놀이공간을</p>
+            <p>꿈꿉니다.</p>
+          </div>
+          <div href="" class="purpose__btnBox is-btnBox">
+            <a href="" class="purpose__btnBox__linkBtn is-btnBox__link">자세히보기 ⟶</a>
+          </div>
+        </div>
       </div>
     </main>
     <footer id="footer" class="footer">
